--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 
-p{
+body{
     font-family: 'Open Sans Condensed', sans-serif;
     font-size: 1.2rem;
 }
@@ -24,3 +24,5 @@ h1 {
         height: 600px;
      }
 
+    
+   
